# Carpremiumsell

./: README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_trust_badge.py  0003_add_seller_reputation.py  0003_add_sellers.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  internal.py  listings.py  search.py  sell.py
backend/app/connectors/: base.py  example_marketplace.py  mercado_livre.py  mercadolivre.py  olx.py
backend/app/core/: config.py  logging_config.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  listing.py  user.py
backend/app/schemas/: auth.py  listing.py
backend/app/services/: ai_provider.py  listing_selection.py  normalization.py  pricing.py  recommendations.py  seller_stats.py  trust.py
backend/app/tests/: test_jobs_connector_selection.py  test_listing_selection.py  test_mercado_livre_connector.py  test_mercadolivre_connector.py  test_olx_connector.py  test_pricing.py  test_seller_stats.py  test_trust.py
backend/app/tests/fixtures/: mercado_livre_detail.html  mercado_livre_detail_b.html  mercado_livre_detail_one.html  mercado_livre_detail_three.html  mercado_livre_detail_two.html  mercado_livre_search.html  mercado_livre_search_page1.html  mercado_livre_search_page2.html  mercadolivre_detail.html  mercadolivre_search.html  olx_detail_IDOLX123.html  olx_detail_IDOLX456.html  olx_detail_IDOLX789.html  olx_search_page1.html  olx_search_page2.html
backend/app/workers/: jobs.py
(+6 files in other folders)
